# role_plai

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
ai/: .env.example  README.md  pyproject.toml
ai/data/: 20240428160126.json
ai/src/: cli.py  data.py  prepare.py  search.py
fastapi/: Dockerfile  README.md  database.py  main.py  requirements.txt
fastapi/data/: 20240428160810.json  sample.json  sample2.json
fastapi/src/: cli.py
role_play_app/: Dockerfile  package-lock.json  package.json
role_play_app/src/app/: page.tsx
role_play_app/src/components/: speechinput.tsx
role_play_app/src/types/: speech-recognition.d.ts
